testdata/baselines/reference/submodule/conformance/exportNestedNamespaces.errors.txt
mod.js(1,1): error TS2304: Cannot find name 'exports'.
mod.js(2,1): error TS2304: Cannot find name 'exports'.
mod.js(5,1): error TS2304: Cannot find name 'exports'.
mod.js(7,14): error TS2339: Property 'p' does not exist on type 'Classic'.
use.js(3,17): error TS2339: Property 'K' does not exist on type '{}'.
use.js(8,15): error TS2694: Namespace '"mod"' has no exported member 'n'.
use.js(9,13): error TS2749: 's.Classic' refers to a value, but is being used as a type here. Did you mean 'typeof s.Classic'?


==== mod.js (4 errors) ====
    exports.n = {};
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    exports.n.K = function () {
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
        this.x = 10;
    }
    exports.Classic = class {
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
        constructor() {
            this.p = 1
                 ~
!!! error TS2339: Property 'p' does not exist on type 'Classic'.
        }
    }
    
==== use.js (3 errors) ====
    import * as s from './mod'
    
    var k = new s.n.K()
                    ~
!!! error TS2339: Property 'K' does not exist on type '{}'.
    k.x
    var classic = new s.Classic()
    
    
    /** @param {s.n.K} c
                  ~
!!! error TS2694: Namespace '"mod"' has no exported member 'n'.
        @param {s.Classic} classic */
                ~~~~~~~~~
!!! error TS2749: 's.Classic' refers to a value, but is being used as a type here. Did you mean 'typeof s.Classic'?
    function f(c, classic) {
        c.x
        classic.p
    }
    
    
    